overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  ports:
    - port: 8080
      nodePort: 30808
  selector:
    app: my-app
  type: NodePort
